--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         <hr>
         Kushal
         <hr>
-        Grandma
+        Mama
         <hr>
-        Grandpa
+        Papa
         <hr>
         </b>
   
